Added background image and updated HTML

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
       <div class="baby-size" id="babySize"></div>
 
       <!-- טבלת הימים -->
-      <div class="grid-title">טבלת הימים מתחילת ההריון ועד התאריך</div>
+      <div class="grid-title">טבלת הימים מתחילת ההריון ועד החופש!!!!</div>
       <div class="grid" id="daysGrid"></div>
     </div>
   </div>
