--- a/index.html
+++ b/index.html
@@ -5,17 +5,18 @@
   <title>הספירה של יעל עד ללידה</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <!-- animate.css -->
+  <!-- ספרייה לאנימציות מוכנות (animate.css) -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 
   <style>
-    /* רקע בסיסי + הגדרות */
+    /* -- רקע וקונפיגורציית בסיס -- */
     body {
       margin: 0;
       padding: 0;
       direction: rtl;
       font-family: "Alef", sans-serif;
-      background: url('https://via.placeholder.com/1200x800?text=Baby+Background') no-repeat center center fixed;
+      /* תמונה מקומית ששמה 1212.png, נמצאת באותה תיקייה של index.html */
+      background: url('1212.png') no-repeat center center fixed;
       background-size: cover;
       color: #333;
     }
@@ -25,7 +26,7 @@
       padding-bottom: 50px;
     }
 
-    /* כותרת */
+    /* -- כותרת עליונה -- */
     header {
       text-align: center;
       padding: 30px 20px;
@@ -37,13 +38,14 @@
       font-size: 2em;
       color: #f06292;
     }
+    /* הודעה מעודדת אקראית */
     .encouraging-message {
       margin: 10px 0;
       font-size: 1.2em;
       color: #8e24aa;
     }
 
-    /* תוכן מרכזי */
+    /* -- תוכן מרכזי -- */
     .container {
       max-width: 600px;
       margin: 0 auto;
@@ -53,7 +55,7 @@
       box-shadow: 0 0 15px rgba(0,0,0,0.2);
     }
 
-    /* ספירה לאחור */
+    /* ספירה לאחור (ימים, שעות...) */
     .countdown-title {
       text-align: center;
       font-size: 1.5em;
@@ -80,7 +82,7 @@
       color: #f06292;
     }
 
-    /* progress bar */
+    /* בר התקדמות (Progress Bar) */
     .progress-container {
       width: 100%;
       margin: 20px auto;
@@ -97,7 +99,7 @@
       transition: width 1s ease;
     }
 
-    /* מידע שבוע הריון + גודל עובר */
+    /* שבוע הריון + גודל העובר */
     .week-info {
       text-align: center;
       margin-top: 10px;
@@ -112,7 +114,7 @@
       margin-bottom: 20px;
     }
 
-    /* טבלת הימים */
+    /* טבלת ימים (ללא סופי שבוע) */
     .grid-title {
       text-align: center;
       margin-top: 30px;
@@ -153,8 +155,7 @@
   <div class="overlay">
     <!-- כותרת עליונה -->
     <header>
-      <!-- שים כאן את השם של אשתך (יעל) -->
-      <h1 class="animate__animated animate__zoomIn">הספירה של יעל עד ללידה</h1>
+      <h1 class="animate__animated animate__zoomIn">הספירה של יעל עד ללידה (ללא סופ"ש)</h1>
       <div id="quote" class="encouraging-message animate__animated animate__fadeIn"></div>
     </header>
 
@@ -189,16 +190,17 @@
       <div class="week-info" id="weekInfo"></div>
       <div class="baby-size" id="babySize"></div>
 
-      <!-- טבלת הימים -->
-      <div class="grid-title">טבלת הימים מתחילת ההריון ועד החופש!!!!</div>
+      <!-- טבלת הימים (ללא שישי שבת) -->
+      <div class="grid-title">טבלת הימים (ללא סופ"ש)</div>
       <div class="grid" id="daysGrid"></div>
     </div>
   </div>
 
   <script>
     /* הגדרות בסיסיות */
-    const targetDate = new Date(2025, 8, 2); // 2 בספטמבר 2025
-    const daysOfPregnancy = 280; // 40 שבועות
+    // תאריך יעד (2 בספטמבר 2025)
+    const targetDate = new Date(2025, 8, 2);
+    const daysOfPregnancy = 280;
     const startDate = new Date(targetDate.getTime() - daysOfPregnancy * 24 * 60 * 60 * 1000);
 
     /* הודעות מעודדות */
@@ -210,8 +212,8 @@
       "תהני מכל רגע – ואוטוטו זה קורה!",
       "ההריון הזה הוא מסע מופלא – את נפלאה!"
     ];
-    const randomIndex = Math.floor(Math.random() * messages.length);
-    document.getElementById("quote").textContent = messages[randomIndex];
+    document.getElementById("quote").textContent =
+      messages[Math.floor(Math.random() * messages.length)];
 
     /* נתונים על "גודל העובר" לפי שבוע */
     const babySizeData = [
@@ -269,9 +271,10 @@
       const now = new Date();
       const oneWeek = 1000 * 60 * 60 * 24 * 7;
       let currentWeek = Math.floor((now - startDate) / oneWeek);
-      if (currentWeek < 0) currentWeek = 0; // אם עדיין לא הגענו למועד התחלה
+      if (currentWeek < 0) currentWeek = 0;
 
-      document.getElementById("weekInfo").textContent = `את בשבוע ${currentWeek} להריון`;
+      document.getElementById("weekInfo").textContent =
+        `את בשבוע ${currentWeek} להריון`;
 
       let sizeDescription = "";
       for (let i = babySizeData.length - 1; i >= 0; i--) {
@@ -281,70 +284,76 @@
         }
       }
       if (sizeDescription) {
-        document.getElementById("babySize").textContent = `העובר בערך בגודל של ${sizeDescription}!`;
+        document.getElementById("babySize").textContent =
+          `העובר בערך בגודל של ${sizeDescription}!`;
       } else {
-        document.getElementById("babySize").textContent = "מוקדם מדי למדוד גודל... המשיכי לעקוב!";
+        document.getElementById("babySize").textContent =
+          "מוקדם מדי למדוד גודל... המשיכי לעקוב!";
       }
     }
 
-    /* יצירת טבלת כל הימים (280 ימים), וסימון אוטומטי של מה שכבר עבר */
+    /* טבלת ימים (ללא שישי שבת) */
     function generateDaysGrid() {
-      const millisInDay = 1000 * 60 * 60 * 24;
-      const now = new Date();
-
-      // סך הכל ימים בין startDate ל targetDate
-      const totalDays = Math.ceil((targetDate - startDate) / millisInDay);
-
       const daysGrid = document.getElementById("daysGrid");
       daysGrid.innerHTML = "";
 
-      if (totalDays <= 0) return;
+      let currentDate = new Date(startDate);
+      const now = new Date();
 
-      for (let i = 0; i < totalDays; i++) {
-        const dayElem = document.createElement("div");
-        dayElem.classList.add("day");
+      // נתקדם מ-startDate ועד (כולל) התאריך day < targetDate
+      while (currentDate < targetDate) {
+        const dayOfWeek = currentDate.getDay();
+        // getDay(): 0=ראשון, 1=שני, 2=שלישי, 3=רביעי, 4=חמישי, 5=שישי, 6=שבת
 
-        // תאריך היום ה-i
-        const dayDate = new Date(startDate.getTime() + i * millisInDay);
+        // אם זה שישי(5) או שבת(6) - נדלג
+        if (dayOfWeek !== 5 && dayOfWeek !== 6) {
+          // צור ריבוע
+          const dayElem = document.createElement("div");
+          dayElem.classList.add("day");
 
-        // מספור רץ (1 עד totalDays)
-        const d = dayDate.getDate();
-        const m = dayDate.getMonth() + 1;
-        dayElem.textContent = d + "/" + m;
+          // טקסט: אפשר לספור כמה ימי עבודה עד כה
+          // או פשוט להציג ערך רץ?
+          // כאן נוכל להציג מספר רץ...
+          // אפשר גם להציג את התאריך (dd/mm):
+          const display = (currentDate.getDate()) + "/" + (currentDate.getMonth() + 1);
+          dayElem.textContent = display;
 
+          // סימון אם עבר היום
+          if (currentDate < now) {
+            dayElem.classList.add("crossed");
+          }
 
-        // אם היום כבר עבר
-        if (dayDate < now) {
-          dayElem.classList.add("crossed");
+          // אפשרות ללחיצה לסימון ידני
+          dayElem.addEventListener("click", () => {
+            dayElem.classList.toggle("crossed");
+          });
+
+          daysGrid.appendChild(dayElem);
         }
 
-        // אפשרות לסמן/לבטל ידנית
-        dayElem.addEventListener("click", () => {
-          dayElem.classList.toggle("crossed");
-        });
-
-        daysGrid.appendChild(dayElem);
+        // הוסף יום אחד
+        currentDate.setDate(currentDate.getDate() + 1);
       }
     }
 
-    /* רענון */
+    /* רענון כללי */
     function refreshAll() {
       updateCountdown();
       updateProgressBar();
       updateWeekInfo();
     }
 
-    // הפעלה ראשונית
+    // ריצה ראשונית
     refreshAll();
     generateDaysGrid();
 
-    // רענון ספירה לאחור ו-Progress Bar כל שנייה
+    // רענון ספירה לאחור, progress bar וכו' כל שנייה
     setInterval(refreshAll, 1000);
 
-    // רענון טבלת הימים (נניח כל שעה)
+    // טבלת הימים מרענן כל שעה (או יותר)
     setInterval(generateDaysGrid, 1000 * 60 * 60);
 
-    // רענון שבוע הריון (פעם ביום)
+    // עדכון שבוע הריון פעם ביום
     setInterval(updateWeekInfo, 1000 * 60 * 60 * 24);
   </script>
 </body>
