--- a/index.html
+++ b/index.html
@@ -2,70 +2,85 @@
 <html lang="he">
 <head>
   <meta charset="UTF-8" />
-  <title>הספירה של יעל עד ללידה</title>
+  <title>הספירה של יעל – ללא סופ"ש</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <!-- ספרייה לאנימציות מוכנות (animate.css) -->
+  <!-- animate.css לאנימציות בסיסיות -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 
   <style>
-    /* -- רקע וקונפיגורציית בסיס -- */
     body {
       margin: 0;
       padding: 0;
       direction: rtl;
       font-family: "Alef", sans-serif;
-      /* תמונה מקומית ששמה 1212.png, נמצאת באותה תיקייה של index.html */
-      background: url('1212.png') no-repeat center center fixed;
-      background-size: cover;
-      color: #333;
-    }
-    .overlay {
-      background-color: rgba(255, 255, 255, 0.8);
-      min-height: 100vh;
-      padding-bottom: 50px;
+      background-color: #f7f7f7;
     }
 
-    /* -- כותרת עליונה -- */
+    /* מכלול ראשי – מרכז את התוכן */
+    .main-layout {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      min-height: 100vh;
+      /* יוצרים חלל עבור התוכן והטבלא */
+    }
+
+    /* אזור לתמונות (אחת מימין ואחת משמאל) */
+    .top-images-container {
+      width: 100%;
+      display: flex;
+      justify-content: space-between; /* תמונות בקצוות */
+      align-items: center;
+      padding: 10px;
+    }
+    .top-images-container img {
+      /* שינוי הגודל בהתאם לצורך שלך */
+      width: 250px;
+      height: auto;
+      border-radius: 10px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.3);
+    }
+
+    /* כותרת עליונה וטקסט עידוד */
     header {
       text-align: center;
-      padding: 30px 20px;
-      background-color: rgba(255, 255, 255, 0.7);
-      margin-bottom: 20px;
+      margin: 20px auto;
     }
     header h1 {
       margin: 0;
       font-size: 2em;
       color: #f06292;
     }
-    /* הודעה מעודדת אקראית */
     .encouraging-message {
-      margin: 10px 0;
+      margin-top: 10px;
       font-size: 1.2em;
       color: #8e24aa;
     }
 
-    /* -- תוכן מרכזי -- */
+    /* מיכל מרכזי לספירה לאחור ופרטים נוספים */
     .container {
-      max-width: 600px;
-      margin: 0 auto;
       background-color: #fff;
       border-radius: 10px;
       padding: 20px;
+      max-width: 600px;
+      width: 90%;
       box-shadow: 0 0 15px rgba(0,0,0,0.2);
+      margin-bottom: 30px;
     }
 
-    /* ספירה לאחור (ימים, שעות...) */
+    /* ספירה לאחור (ימי עבודה) */
     .countdown-title {
       text-align: center;
       font-size: 1.5em;
-      margin-bottom: 15px;
+      margin-bottom: 20px;
       color: #d81b60;
     }
     .countdown {
       display: flex;
       justify-content: center;
-      gap: 15px;
+      gap: 20px;
       font-size: 18px;
       color: #333;
       margin-bottom: 20px;
@@ -82,7 +97,7 @@
       color: #f06292;
     }
 
-    /* בר התקדמות (Progress Bar) */
+    /* Progress Bar נשאר מהדוגמאות הקודמות, אם תרצו */
     .progress-container {
       width: 100%;
       margin: 20px auto;
@@ -99,25 +114,22 @@
       transition: width 1s ease;
     }
 
-    /* שבוע הריון + גודל העובר */
-    .week-info {
+    /* מידע על שבוע הריון + גודל עובר */
+    .week-info, .baby-size {
       text-align: center;
-      margin-top: 10px;
-      font-size: 1.2em;
+      margin: 5px 0;
       color: #5d4037;
+      font-size: 1.1em;
     }
     .baby-size {
-      text-align: center;
-      margin-top: 5px;
-      font-size: 1em;
       color: #4e342e;
-      margin-bottom: 20px;
+      margin-bottom: 15px;
     }
 
-    /* טבלת ימים (ללא סופי שבוע) */
+    /* טבלת ימים (ללא סופ"ש) - אם רוצים לשמור */
     .grid-title {
       text-align: center;
-      margin-top: 30px;
+      margin-top: 20px;
       font-size: 1.3em;
       color: #d81b60;
     }
@@ -152,16 +164,24 @@
   </style>
 </head>
 <body>
-  <div class="overlay">
-    <!-- כותרת עליונה -->
-    <header>
-      <h1 class="animate__animated animate__zoomIn">הספירה של יעל עד ללידה (ללא סופ"ש)</h1>
+  <!-- שתי תמונות למעלה, בקצוות -->
+  <div class="top-images-container">
+    <!-- תמונה משמאל -->
+    <img src="1212.png" alt="יעל משמאל" />
+    <!-- תמונה מימין -->
+    <img src="1212.png" alt="יעל מימין" />
+  </div>
+
+  <!-- פריסת התוכן הראשי -->
+  <div class="main-layout">
+    <header class="animate__animated animate__zoomIn">
+      <h1>הספירה של יעל עד ללידה (ללא סופ"ש)</h1>
       <div id="quote" class="encouraging-message animate__animated animate__fadeIn"></div>
     </header>
 
     <div class="container animate__animated animate__fadeInUp">
-      <!-- ספירה לאחור -->
-      <div class="countdown-title">נותרו עד לתאריך היעד (2 בספטמבר 2025):</div>
+      <!-- ספירה לאחור (ימי עבודה) -->
+      <div class="countdown-title">ימי עבודה שנותרו עד 2 בספטמבר 2025:</div>
       <div class="countdown" id="countdown">
         <div>
           <span id="days">0</span>
@@ -181,29 +201,29 @@
         </div>
       </div>
 
-      <!-- Progress Bar -->
+      <!-- Progress Bar (אופציונלי) -->
       <div class="progress-container">
         <div class="progress-bar" id="progressBar"></div>
       </div>
 
-      <!-- שבוע הריון + גודל העובר -->
+      <!-- שבוע הריון וגודל העובר -->
       <div class="week-info" id="weekInfo"></div>
       <div class="baby-size" id="babySize"></div>
 
-      <!-- טבלת הימים (ללא שישי שבת) -->
-      <div class="grid-title">טבלת הימים (ללא סופ"ש)</div>
+      <!-- טבלת ייאוש (ללא שישי-שבת) אם עדיין רוצים -->
+      <div class="grid-title">טבלת ימי עבודה (ללא סופ"ש)</div>
       <div class="grid" id="daysGrid"></div>
     </div>
   </div>
 
   <script>
-    /* הגדרות בסיסיות */
-    // תאריך יעד (2 בספטמבר 2025)
-    const targetDate = new Date(2025, 8, 2);
+    /* הגדרות תאריך יעד */
+    const targetDate = new Date(2025, 8, 2); // 2 בספטמבר 2025
+    // חישוב תאריך התחלה כ-280 יום לפני
     const daysOfPregnancy = 280;
     const startDate = new Date(targetDate.getTime() - daysOfPregnancy * 24 * 60 * 60 * 1000);
 
-    /* הודעות מעודדות */
+    /* הודעות מעודדות אקראיות */
     const messages = [
       "כל יום מקרב אותנו לרגע המיוחל!",
       "זכרי לנוח ולהנות מהדרך – את עושה עבודה מדהימה!",
@@ -215,7 +235,7 @@
     document.getElementById("quote").textContent =
       messages[Math.floor(Math.random() * messages.length)];
 
-    /* נתונים על "גודל העובר" לפי שבוע */
+    /* מידע "גודל העובר" לפי שבוע */
     const babySizeData = [
       { week: 4, description: "גרגר שומשום" },
       { week: 6, description: "גודל עדשה" },
@@ -229,31 +249,45 @@
       { week: 36, description: "גודל אבטיח קטן" },
     ];
 
-    /* ספירה לאחור */
+    /* חישוב "ימי עבודה" בין שני תאריכים (לא כולל שישי-שבת) */
+    function businessDaysBetween(start, end) {
+      let count = 0;
+      let current = new Date(start);
+      while (current < end) {
+        const dayOfWeek = current.getDay(); // 0=ראשון,1=שני,2=שלישי,3=רביעי,4=חמישי,5=שישי,6=שבת
+        // אם היום הוא ראשון-חמישי => נחשב
+        if (dayOfWeek !== 5 && dayOfWeek !== 6) {
+          count++;
+        }
+        current.setDate(current.getDate() + 1);
+      }
+      return count;
+    }
+
+    /* ספירה לאחור (ימי עבודה במקום כולל) */
     function updateCountdown() {
       const now = new Date();
-      const diff = targetDate - now;
-
-      if (diff <= 0) {
-        document.getElementById("days").textContent = 0;
-        document.getElementById("hours").textContent = 0;
-        document.getElementById("minutes").textContent = 0;
-        document.getElementById("seconds").textContent = 0;
+      if (now >= targetDate) {
+        // אם כבר עבר התאריך...
+        document.getElementById('days').textContent = 0;
+        document.getElementById('hours').textContent = 0;
+        document.getElementById('minutes').textContent = 0;
+        document.getElementById('seconds').textContent = 0;
         return;
       }
 
-      const days = Math.floor(diff / (1000 * 60 * 60 * 24));
-      const hours = Math.floor((diff / (1000 * 60 * 60)) % 24);
-      const minutes = Math.floor((diff / (1000 * 60)) % 60);
-      const seconds = Math.floor((diff / 1000) % 60);
+      // ימי עבודה שנותרו
+      const workdaysLeft = businessDaysBetween(now, targetDate);
 
-      document.getElementById("days").textContent = days;
-      document.getElementById("hours").textContent = hours;
-      document.getElementById("minutes").textContent = minutes;
-      document.getElementById("seconds").textContent = seconds;
+      // אפשר, לצורך עניין, להשאיר שעות/דקות/שניות כ-0
+      // כי מבחינת "ימי עבודה" זה לא לגמרי הגיוני לשלב סופ"ש...
+      document.getElementById('days').textContent = workdaysLeft;
+      document.getElementById('hours').textContent = 0;
+      document.getElementById('minutes').textContent = 0;
+      document.getElementById('seconds').textContent = 0;
     }
 
-    /* Progress Bar */
+    /* Progress Bar (עדיין בהתייחסות כוללת) */
     function updateProgressBar() {
       const now = new Date();
       const totalDuration = targetDate - startDate;
@@ -266,7 +300,7 @@
       document.getElementById("progressBar").style.width = progressPercentage + "%";
     }
 
-    /* שבוע הריון + גודל העובר */
+    /* שבוע הריון + גודל עובר (לפי זמן אמיתי) */
     function updateWeekInfo() {
       const now = new Date();
       const oneWeek = 1000 * 60 * 60 * 24 * 7;
@@ -292,68 +326,61 @@
       }
     }
 
-    /* טבלת ימים (ללא שישי שבת) */
+    /* טבלת ייאוש: רק ימי עבודה (ללא שישי שבת) */
     function generateDaysGrid() {
-      const daysGrid = document.getElementById("daysGrid");
-      daysGrid.innerHTML = "";
+      const grid = document.getElementById('daysGrid');
+      grid.innerHTML = "";
 
-      let currentDate = new Date(startDate);
+      let current = new Date(startDate);
       const now = new Date();
 
-      // נתקדם מ-startDate ועד (כולל) התאריך day < targetDate
-      while (currentDate < targetDate) {
-        const dayOfWeek = currentDate.getDay();
-        // getDay(): 0=ראשון, 1=שני, 2=שלישי, 3=רביעי, 4=חמישי, 5=שישי, 6=שבת
-
-        // אם זה שישי(5) או שבת(6) - נדלג
+      while (current < targetDate) {
+        let dayOfWeek = current.getDay();
         if (dayOfWeek !== 5 && dayOfWeek !== 6) {
-          // צור ריבוע
-          const dayElem = document.createElement("div");
+          // יוצרים ריבוע עבור היום
+          let dayElem = document.createElement("div");
           dayElem.classList.add("day");
 
-          // טקסט: אפשר לספור כמה ימי עבודה עד כה
-          // או פשוט להציג ערך רץ?
-          // כאן נוכל להציג מספר רץ...
-          // אפשר גם להציג את התאריך (dd/mm):
-          const display = (currentDate.getDate()) + "/" + (currentDate.getMonth() + 1);
-          dayElem.textContent = display;
+          // אפשר להציג תאריך ב-dd/mm
+          const d = current.getDate();
+          const m = current.getMonth() + 1;
+          dayElem.textContent = d + "/" + m;
 
-          // סימון אם עבר היום
-          if (currentDate < now) {
+          // סימון אם עבר
+          if (current < now) {
             dayElem.classList.add("crossed");
           }
 
-          // אפשרות ללחיצה לסימון ידני
+          // אפשר לסמן/לבטל ידנית
           dayElem.addEventListener("click", () => {
             dayElem.classList.toggle("crossed");
           });
 
-          daysGrid.appendChild(dayElem);
+          grid.appendChild(dayElem);
         }
-
-        // הוסף יום אחד
-        currentDate.setDate(currentDate.getDate() + 1);
+        // מעבר ליום הבא
+        current.setDate(current.getDate() + 1);
       }
     }
 
-    /* רענון כללי */
+    // איגוד פעולות לרענון
     function refreshAll() {
       updateCountdown();
       updateProgressBar();
       updateWeekInfo();
     }
 
-    // ריצה ראשונית
+    // קריאה ראשונית
     refreshAll();
     generateDaysGrid();
 
-    // רענון ספירה לאחור, progress bar וכו' כל שנייה
+    // רענון ספירה לאחור ו-Progress Bar כל שנייה
     setInterval(refreshAll, 1000);
 
-    // טבלת הימים מרענן כל שעה (או יותר)
+    // רענון טבלת ימים כל שעה
     setInterval(generateDaysGrid, 1000 * 60 * 60);
 
-    // עדכון שבוע הריון פעם ביום
+    // רענון שבוע הריון פעם ביום
     setInterval(updateWeekInfo, 1000 * 60 * 60 * 24);
   </script>
 </body>
